<resources>
    <string name="app_name">CENI RDC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="about">A propos</string>
    <string name="welcome">Accueil</string>
    <string name="txt_ceni">Votons pour le bien etre du pays.</string>
    <string name="menu_list_elec">Liste electorale</string>
    <string name="subemenu_list_elec">Suis-je inscrit sur la liste electorale</string>
    <string name="menu_buro_vote">Mon bureau de vote</string>
    <string name="subemenu_buro_vote">Ou se trouve mon bureau de vote</string>
    <string name="menu_cands">Candidats</string>
    <string name="subemenu_cands">Candidat inscrits aux scrutins</string>
    <string name="menu_results">Resultats Officiel</string>
    <string name="subemenu_results">Resultast officiel des scrutins</string>
    <string name="menu_faq">Foire aux questions</string>
    <string name="subemenu_faq">Questions frequentes sur les elections</string>
    <string name="title_activity_about">A propos</string>
    <string name="txt_about">Elections General 2018</string>
    <string name="txt_vesion">Version 1.0</string>
    <string name="txt_copyright">Copyright &#169; 2018 CENI. Tous droits reserves.</string>
    <string name="title_about">A propos</string>
    <string name="title_activity_candidates">ActivityCandidates</string>
    <string name="title_activity_cands">Choix de l\'echecance</string>
    <string name="menu_cands_prez">Presidentielle</string>
    <string name="txt_vote_choice_prez">PRESIDENTIELLE</string>
    <string name="txt_vote_choice_legs">LEGISTLATIVES</string>
    <string name="txt_vote_choice_prov">PROVINCIALES</string>
    <string name="txt_vote_choice_urbs">URBAINES</string>
    <string name="txt_vote_choice_loc">LOCALES</string>
    <string name="menu_vote_sim">Simuler un vote</string>
    <string name="subemenu_vote_sim_subtitle">Comment utiliser la machine a voter</string>
    <string name="menuSimInstallation">Installation</string>
    <string name="menuSimOpenVote">Ouvrir les votes</string>
    <string name="menuSimPasserAuvote">Passer au vote</string>
    <string name="menuSimCloturerLeVote">Cloturer les votes</string>
    <string name="menuSimParametrage">Parametrage</string>
    <string name="menuSimImprimer">Imprimer</string>
    <string name="menuSimTransmetre">Transmettres resultas</string>
    <string name="title_menu">Election 2018</string>
    <string name="title_activity_lois_elec">ActivityLoisElec</string>
    <string name="txt_remplir">Veuillez remplir toutes les cases ci-dessous</string>
    <string name="txt_hint_name">Nom</string>
    <string name="txt_hint_surname">Post-nom</string>
    <string name="txt_hint_birthplace">Lieu de naissance</string>
    <string name="txt_hint_dob">Date de naissance</string>
    <string name="txt_zone_cands">Zone reservee aux candidats.</string>
    <string name="txt_btn_insc">Suis-je inscrit dans la liste electorale?</string>
</resources>